--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "app-tareas": "file:",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.11.0",
