--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.8.1",
     "client": "file:",
+    "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
