--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.8.1",
     "client": "file:",
+    "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
     "react": "^19.0.0",
